syntax = "proto3";
package ie.gmit.ds;

import "google/protobuf/wrappers.proto";

option java_multiple_files = true;
option java_package = "ie.gmit.ds";

service PasswordService {
   rpc Hash(PasswordCreateRequest) returns (PasswordCreateResponse) {}
   rpc Validate (PasswordValidateRequest) returns (google.protobuf.BoolValue) {}
}

message PasswordCreateRequest {
   int64 userId = 1;
   string password = 2;
}

message PasswordCreateResponse {
    string userId = 1;
    bytes hashedPassword = 2;
    bytes salt = 3;
}

message PasswordValidateRequest {
   string password = 1;
   bytes hashedPassword = 2;
   bytes salt = 3;
}
